# ICTL

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SKILL.md  rustfmt.toml  test.txt  test_final.txt
.github/: copilot-instructions.md
.github/workflows/: rust.yml
crates/ictl-analysis/: Cargo.toml
crates/ictl-cli/: Cargo.toml
crates/ictl-cli/src/: main.rs
crates/ictl-cli/tests/: ictl_acausal.rs  ictl_entropic.rs  ictl_isochronous.rs  ictl_semantic.rs  ictl_temporal.rs
crates/ictl-core/: Cargo.toml
crates/ictl-frontend/: Cargo.toml
crates/ictl-runtime/: Cargo.toml
docs/: docs.md  ictl_index.md
docs/lang/: advanced_routing.md  gc.md  if_else.md  isochronous_matrix.md  iter_split_map.md  overview.md  promises.md  routines.md  semantics.md  speculative_branches.md  syntax.md  topologies.md
docs/proposals/: advanced_routing.md  dev_ergonomics.md  egc.md  ictl_prop_advanced_routing.md  ictl_prop_dev_ergonomics.md  ictl_prop_egc.md  ictl_prop_if_else.md  ictl_prop_isochronous_matrix.md  ictl_prop_iter_paced_loop.md  (+10 more)
examples/: advanced_garbage_flow.ictl  circular.ictl  isochronous_matrix_complex.ictl  language_expansion_demo.ictl  promises_example.ictl  sample.ictl  select_padding_test.ictl  select_timeout_padding_test.ictl  system_log_example.ictl  topology1.ictl  topology2.ictl  typecheck_test.ictl
lsp/: Cargo.toml
lsp/src/: analysis_worker.rs  cli.rs  hover.rs  inlay_hints.rs  main.rs  server.rs  tokens.rs
scripts/: ictl_test.sh
src/: lib.rs  main.rs
tests/: causal_reversion.rs  integration.rs  topographical_merge.rs
(+76 files in other folders)
